--- a/periscope-ejb/pom.xml
+++ b/periscope-ejb/pom.xml
@@ -69,6 +69,11 @@
          <scope>test</scope>
       </dependency>
 
+      <dependency>
+      	<groupId>com.github.jmkgreen.morphia</groupId>
+      	<artifactId>morphia</artifactId>
+      	<version>1.2.2</version>
+      </dependency>
    </dependencies>
 
    <build>
