--- a/pom.xml
+++ b/pom.xml
@@ -118,4 +118,16 @@
       </pluginManagement>
    </build>
 
+   <dependencies>
+   	<dependency>
+   		<groupId>org.jboss.spec.javax.faces</groupId>
+   		<artifactId>jboss-jsf-api_2.0_spec</artifactId>
+   		<scope>provided</scope>
+   	</dependency>
+   	<dependency>
+   		<groupId>org.jboss.spec.javax.servlet</groupId>
+   		<artifactId>jboss-servlet-api_3.0_spec</artifactId>
+   		<scope>provided</scope>
+   	</dependency>
+   </dependencies>
 </project>
