--- a/periscope-web/pom.xml
+++ b/periscope-web/pom.xml
@@ -53,6 +53,21 @@
       	<artifactId>primefaces</artifactId>
       	<version>3.4.2</version>
       </dependency>
+      <dependency>
+      	<groupId>org.apache.commons</groupId>
+      	<artifactId>commons-io</artifactId>
+      	<version>1.3.2</version>
+      </dependency>
+      <dependency>
+      	<groupId>commons-fileupload</groupId>
+      	<artifactId>commons-fileupload</artifactId>
+      	<version>1.2.2</version>
+      </dependency>
+      <dependency>
+      	<groupId>org.jboss.spec.javax.faces</groupId>
+      	<artifactId>jboss-jsf-api_2.0_spec</artifactId>
+      	<scope>provided</scope>
+      </dependency>
    </dependencies>
 	<repositories>
 		<repository>
@@ -75,5 +90,19 @@
          </plugin>
       </plugins>
    </build>
+   <dependencyManagement>
+   	<dependencies>
+   		<dependency>
+   			<groupId>org.jboss.spec</groupId>
+   			<artifactId>jboss-javaee-web-6.0</artifactId>
+   			<version>${javaee6.web.spec.version}</version>
+   			<type>pom</type>
+   			<scope>import</scope>
+   		</dependency>
+   	</dependencies>
+   </dependencyManagement>
+   <properties>
+   	<javaee6.web.spec.version>2.0.0.Final</javaee6.web.spec.version>
+   </properties>
 
 </project>
