--- a/periscope-ejb/pom.xml
+++ b/periscope-ejb/pom.xml
@@ -68,13 +68,25 @@
          <version>1.0.0.CR4</version>
          <scope>test</scope>
       </dependency>
-
       <dependency>
       	<groupId>com.github.jmkgreen.morphia</groupId>
       	<artifactId>morphia</artifactId>
       	<version>1.2.2</version>
       </dependency>
+      <dependency>
+      	<groupId>com.bigfatgun</groupId>
+      	<artifactId>fixjures</artifactId>
+      	<version>2.0-SNAPSHOT</version>
+      </dependency>
    </dependencies>
+   
+   <repositories>
+   		<repository>
+                <id>fixjures</id>
+                <name>fixjures.googlecode.com</name>
+                <url>http://fixjures.googlecode.com/svn/repo</url>
+        </repository>
+   </repositories>
 
    <build>
       <plugins>
