--- a/periscope-ear/pom.xml
+++ b/periscope-ear/pom.xml
@@ -27,6 +27,12 @@
          <artifactId>periscope-ejb</artifactId>
          <type>ejb</type>
       </dependency>
+      <dependency>
+         <groupId>br.ufmt</groupId>
+         <artifactId>periscopeEsb</artifactId>
+         <type>war</type>
+      </dependency>
+      
    </dependencies>
 
    <build>
