Mudanças no template e no tema. Arrumado um problema no filtro de acesso.

--- a/periscope-web/pom.xml
+++ b/periscope-web/pom.xml
@@ -68,6 +68,11 @@
       	<artifactId>jboss-jsf-api_2.0_spec</artifactId>
       	<scope>provided</scope>
       </dependency>
+      <dependency>
+      	<groupId>org.primefaces.themes</groupId>
+      	<artifactId>bootstrap</artifactId>
+      	<version>1.0.8</version>
+      </dependency>
    </dependencies>
 	<repositories>
 		<repository>
