--- a/periscopeEsb/pom.xml
+++ b/periscopeEsb/pom.xml
@@ -158,6 +158,11 @@
       	<artifactId>primefaces</artifactId>
       	<version>3.4.2</version>
       </dependency>
+      <dependency>
+      	<groupId>com.sun.jersey</groupId>
+      	<artifactId>jersey-client</artifactId>
+      	<version>1.17</version>
+      </dependency>
    </dependencies>
    <repositories>
    		<repository>
