--- a/periscope-ejb/pom.xml
+++ b/periscope-ejb/pom.xml
@@ -78,6 +78,11 @@
       	<artifactId>fixjures</artifactId>
       	<version>2.0-SNAPSHOT</version>
       </dependency>
+      <dependency>
+      	<groupId>com.github.mongoutils</groupId>
+      	<artifactId>mongo-lucene</artifactId>
+      	<version>1.0</version>
+      </dependency>
    </dependencies>
    
    <repositories>
