--- a/periscope-ejb/pom.xml
+++ b/periscope-ejb/pom.xml
@@ -83,6 +83,11 @@
       	<artifactId>mongo-lucene</artifactId>
       	<version>1.0</version>
       </dependency>
+      <dependency>
+      	<groupId>org.primefaces</groupId>
+      	<artifactId>primefaces</artifactId>
+      	<version>3.4.2</version>
+      </dependency>
    </dependencies>
    
    <repositories>
