--- a/periscope-ear/pom.xml
+++ b/periscope-ear/pom.xml
@@ -29,6 +29,14 @@
       </dependency>
       
    </dependencies>
+   
+   <repositories>
+		<repository>
+			<id>prime-repo</id>
+			<name>Prime Repo</name>
+			<url>http://repository.primefaces.org</url>
+		</repository>
+	</repositories>
 
    <build>
       <finalName>periscope</finalName>
