--- a/periscope-ear/pom.xml
+++ b/periscope-ear/pom.xml
@@ -77,5 +77,7 @@
          </plugin>
       </plugins>
    </build>
-
+    <properties>
+        <netbeans.hint.deploy.server>JBoss4</netbeans.hint.deploy.server>
+    </properties>
 </project>
