--- a/periscope-ejb/pom.xml
+++ b/periscope-ejb/pom.xml
@@ -88,6 +88,11 @@
       	<artifactId>primefaces</artifactId>
       	<version>3.4.2</version>
       </dependency>
+      <dependency>
+	<groupId>org.apache.poi</groupId>
+	<artifactId>poi</artifactId>
+	<version>3.10-beta2</version>
+      </dependency>
    </dependencies>
    
    <repositories>
