Fix data de prioridade, adicionado WO na database de países e desativação do validador de data de prioridade que causava o bug

--- a/periscope-ejb/src/main/resources/country-inicial-data.yaml
+++ b/periscope-ejb/src/main/resources/country-inicial-data.yaml
@@ -468,6 +468,8 @@
   name: Vanuatu
 - acronym: WF
   name: Wallis & Futuna Islands
+- acronym: WO
+  name: WorldWide
 - acronym: WS
   name: Samoa
 - acronym: YD
