--- a/periscope-ejb/pom.xml
+++ b/periscope-ejb/pom.xml
@@ -93,6 +93,21 @@
 	<artifactId>poi</artifactId>
 	<version>3.10-beta2</version>
       </dependency>
+      <dependency>
+         <groupId>org.apache.pdfbox</groupId>
+         <artifactId>fontbox</artifactId>
+         <version>1.8.3</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.pdfbox</groupId>
+         <artifactId>jempbox</artifactId>
+         <version>1.8.3</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.pdfbox</groupId>
+         <artifactId>pdfbox</artifactId>
+         <version>1.8.3</version>
+      </dependency>
    </dependencies>
    
    <repositories>
