--- a/periscope-ejb/src/main/resources/applicantType-inicial.yaml
+++ b/periscope-ejb/src/main/resources/applicantType-inicial.yaml
@@ -1,8 +1,8 @@
-- name: Empresa Privada
-- name: Pessoa Física
-- name: Universidade Privada
-- name: Instituição de Pesquisa Pública
-- name: Instituição de Pesquisa Privada
-- name: Empresa Pública
-- name: Universidade Pública
+- name: private.company
+- name: individual
+- name: private.university
+- name: public.research
+- name: private.research
+- name: public.company
+- name: public.university
 ---
