--- a/periscope-web/pom.xml
+++ b/periscope-web/pom.xml
@@ -73,6 +73,11 @@
       	<artifactId>commons-fileupload</artifactId>
       	<version>1.3</version>
       </dependency>
+      <dependency>
+         <groupId>${project.groupId}</groupId>
+         <artifactId>periscope-ejb</artifactId>
+         <version>${project.version}</version>
+      </dependency>
    </dependencies>
 	<repositories>
 		<repository>
