--- a/periscope-web/pom.xml
+++ b/periscope-web/pom.xml
@@ -22,6 +22,20 @@
          <artifactId>periscope-ejb</artifactId>
          <type>ejb</type>
          <scope>provided</scope>
+         <exclusions>
+            <exclusion>
+               <artifactId>fontbox</artifactId>
+               <groupId>org.apache.pdfbox</groupId>
+            </exclusion>
+            <exclusion>
+               <artifactId>pdfbox</artifactId>
+               <groupId>org.apache.pdfbox</groupId>
+            </exclusion>
+            <exclusion>
+               <artifactId>jempbox</artifactId>
+               <groupId>org.apache.pdfbox</groupId>
+            </exclusion>
+         </exclusions>
       </dependency>
 
       <!-- Import the JAX-RS API, we use provided scope as the API is included 
@@ -73,11 +87,11 @@
       	<artifactId>commons-fileupload</artifactId>
       	<version>1.3</version>
       </dependency>
-      <dependency>
+<!--      <dependency>
          <groupId>${project.groupId}</groupId>
          <artifactId>periscope-ejb</artifactId>
          <version>${project.version}</version>
-      </dependency>
+      </dependency>-->
    </dependencies>
 	<repositories>
 		<repository>
@@ -113,7 +127,6 @@
    </dependencyManagement>
    <properties>
    	<javaee6.web.spec.version>2.0.0.Final</javaee6.web.spec.version>
-      <netbeans.hint.deploy.server>JBoss4</netbeans.hint.deploy.server>
    </properties>
 
 </project>
