--- a/periscope-ejb/pom.xml
+++ b/periscope-ejb/pom.xml
@@ -1,266 +1,178 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-   <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-   <parent>
-      <artifactId>periscope</artifactId>
-      <groupId>br.ufmt</groupId>
-      <version>1.0-SNAPSHOT</version>
-   </parent>
+    <parent>
+        <artifactId>periscope</artifactId>
+        <groupId>br.ufmt</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-   <artifactId>periscope-ejb</artifactId>
-   <packaging>ejb</packaging>
+    <artifactId>periscope-ejb</artifactId>
+    <packaging>ejb</packaging>
 
-   <name>periscope EJB module</name>
+    <name>periscope EJB module</name>
 
-   <dependencies>
+    <properties>
+        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-      <!-- Declare the APIs we depend on and need for compilation. All of 
-         them are provided by JBoss AS 7 -->
+    <dependencies>
+        <dependency>
+            <groupId>com.github.jmkgreen.morphia</groupId>
+            <artifactId>morphia</artifactId>
+            <version>1.2.3</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>3.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.spec.javax.ejb</groupId>
+            <artifactId>jboss-ejb-api_3.1_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
-      <!-- Import the EJB API, we use provided scope as the API is included 
-         in JBoss AS 7 -->
-      <dependency>
-         <groupId>org.jboss.spec.javax.ejb</groupId>
-         <artifactId>jboss-ejb-api_3.1_spec</artifactId>
-         <scope>provided</scope>
-      </dependency>
+        <!-- Import the CDI API, we use provided scope as the API is included 
+        in JBoss AS 7 -->
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
-      <!-- Import the CDI API, we use provided scope as the API is included 
-         in JBoss AS 7 -->
-      <dependency>
-         <groupId>javax.enterprise</groupId>
-         <artifactId>cdi-api</artifactId>
-         <scope>provided</scope>
-      </dependency>
+        <!-- Import the JPA API, we use provided scope as the API is included 
+        in JBoss AS 7 -->
+        <!-- Provides portable constraints such as @Email -->
 
-      <!-- Import the JPA API, we use provided scope as the API is included 
-         in JBoss AS 7 -->
-      <dependency>
-         <groupId>org.hibernate.javax.persistence</groupId>
-         <artifactId>hibernate-jpa-2.0-api</artifactId>
-         <scope>provided</scope>
-      </dependency>
+        <!-- JSR-303 (Bean Validation) Implementation -->
+        
+        <!-- Hibernate Validator is shipped in JBoss AS 7 -->
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
-      <!-- JSR-303 (Bean Validation) Implementation -->
-      <!-- Provides portable constraints such as @Email -->
-      <!-- Hibernate Validator is shipped in JBoss AS 7 -->
-      <dependency>
-         <groupId>org.hibernate</groupId>
-         <artifactId>hibernate-validator</artifactId>
-         <scope>provided</scope>
-      </dependency>
+        <!-- Optional, but highly recommended -->
+        <!-- Arquillian allows you to test enterprise code such as EJBs and 
+        Transactional(JTA) JPA from JUnit/TestNG -->
+        <dependency>
+            <groupId>org.jboss.arquillian.junit</groupId>
+            <artifactId>arquillian-junit-container</artifactId>
+            <version>1.0.0.CR4</version>
+            <scope>test</scope>
+        </dependency>
 
-
-      <!-- Test scope dependencies -->
-      <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-      </dependency>
-
-      <!-- Optional, but highly recommended -->
-      <!-- Arquillian allows you to test enterprise code such as EJBs and 
-         Transactional(JTA) JPA from JUnit/TestNG -->
-      <dependency>
-         <groupId>org.jboss.arquillian.junit</groupId>
-         <artifactId>arquillian-junit-container</artifactId>
-         <version>1.0.0.CR4</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-      	<groupId>com.github.jmkgreen.morphia</groupId>
-      	<artifactId>morphia</artifactId>
-      	<version>1.2.2</version>
-      </dependency>
-      <dependency>
-      	<groupId>com.bigfatgun</groupId>
-      	<artifactId>fixjures</artifactId>
-      	<version>2.0-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-      	<groupId>com.github.mongoutils</groupId>
-      	<artifactId>mongo-lucene</artifactId>
-      	<version>1.0</version>
-      </dependency>
-      <dependency>
-      	<groupId>org.primefaces</groupId>
-      	<artifactId>primefaces</artifactId>
-      	<version>3.4.2</version>
-      </dependency>
-      <dependency>
-	<groupId>org.apache.poi</groupId>
-	<artifactId>poi</artifactId>
-	<version>3.10-beta2</version>
-      </dependency>
-      <dependency>
-         <groupId>org.apache.pdfbox</groupId>
-         <artifactId>fontbox</artifactId>
-         <version>1.8.4</version>
-      </dependency>
-      <dependency>
-         <groupId>org.apache.pdfbox</groupId>
-         <artifactId>jempbox</artifactId>
-         <version>1.8.4</version>
-      </dependency>
-      <dependency>
-         <groupId>org.apache.pdfbox</groupId>
-         <artifactId>pdfbox</artifactId>
-         <version>1.8.4</version>
-      </dependency>
-   </dependencies>
-   
-   <repositories>
-   		<repository>
-	        <id>fixjures</id>
-	        <name>fixjures.googlecode.com</name>
-	        <url>http://fixjures.googlecode.com/svn/repo</url>
+        <dependency>
+            <groupId>com.bigfatgun</groupId>
+            <artifactId>fixjures</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.mongoutils</groupId>
+            <artifactId>mongo-lucene</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.10-beta2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>fontbox</artifactId>
+            <version>1.8.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>jempbox</artifactId>
+            <version>1.8.4</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>1.8.4</version>
+        </dependency>
+    </dependencies>
+    
+    <repositories>
+        <repository>
+            <id>fixjures</id>
+            <name>fixjures.googlecode.com</name>
+            <url>http://fixjures.googlecode.com/svn/repo</url>
         </repository>
-		<repository>
-			<id>prime-repo</id>
-			<name>Prime Repo</name>
-			<url>http://repository.primefaces.org</url>
-		</repository>		
-   </repositories>
+        <repository>
+            <id>prime-repo</id>
+            <name>Prime Repo</name>
+            <url>http://repository.primefaces.org</url>
+        </repository>
+    </repositories>
 
-   <build>
-      <plugins>
-         <plugin>
-            <artifactId>maven-ejb-plugin</artifactId>
-            <version>2.3</version>
-            <configuration>
-               <!-- Tell Maven we are using EJB 3.1 -->
-               <ejbVersion>3.1</ejbVersion>
-            </configuration>
-         </plugin>
-      </plugins>
-   </build>
-
-   <profiles>
-      <profile>
-         <!-- The default profile skips all tests, though you can tune it 
-            to run just unit tests based on a custom pattern -->
-         <!-- Seperate profiles are provided for running all tests, including 
-            Arquillian tests that execute in the specified container -->
-         <id>default</id>
-         <activation>
-            <activeByDefault>true</activeByDefault>
-         </activation>
-         <build>
-            <plugins>
-               <plugin>
-                  <artifactId>maven-surefire-plugin</artifactId>
-                  <version>2.4.3</version>
-                  <configuration>
-                     <skip>true</skip>
-                  </configuration>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
-
-      <profile>
-         <!-- We add the JBoss repository as we need the JBoss AS connectors 
-            for Arquillian -->
-         <repositories>
-            <!-- The JBoss Community public repository is a composite repository 
-               of several major repositories -->
-            <!-- see http://community.jboss.org/wiki/MavenGettingStarted-Users -->
-            <repository>
-               <id>jboss-public-repository</id>
-               <name>JBoss Repository</name>
-               <url>http://repository.jboss.org/nexus/content/groups/public</url>
-               <!-- These optional flags are designed to speed up your builds 
-                  by reducing remote server calls -->
-               <releases>
-                  <enabled>true</enabled>
-               </releases>
-               <snapshots>
-                  <enabled>false</enabled>
-               </snapshots>
-            </repository>
-         </repositories>
-
-         <pluginRepositories>
-            <pluginRepository>
-               <id>jboss-public-repository</id>
-               <name>JBoss Repository</name>
-               <url>http://repository.jboss.org/nexus/content/groups/public</url>
-               <releases>
-                  <enabled>true</enabled>
-               </releases>
-               <snapshots>
-                  <enabled>false</enabled>
-               </snapshots>
-            </pluginRepository>
-         </pluginRepositories>
-
-         <!-- An optional Arquillian testing profile that executes tests 
-            in your JBoss AS instance -->
-         <!-- This profile will start a new JBoss AS instance, and execute 
-            the test, shutting it down when done -->
-         <!-- Run with: mvn clean test -Parq-jbossas-managed -->
-         <id>arq-jbossas-managed</id>
-         <dependencies>
-            <dependency>
-               <groupId>org.jboss.as</groupId>
-               <artifactId>jboss-as-arquillian-container-managed</artifactId>
-               <version>7.0.2.Final</version>
-               <scope>test</scope>
-            </dependency>
-         </dependencies>
-      </profile>
-
-      <profile>
-         <!-- We add the JBoss repository as we need the JBoss AS connectors 
-            for Arquillian -->
-         <repositories>
-            <!-- The JBoss Community public repository is a composite repository 
-               of several major repositories -->
-            <!-- see http://community.jboss.org/wiki/MavenGettingStarted-Users -->
-            <repository>
-               <id>jboss-public-repository</id>
-               <name>JBoss Repository</name>
-               <url>http://repository.jboss.org/nexus/content/groups/public</url>
-               <!-- These optional flags are designed to speed up your builds 
-                  by reducing remote server calls -->
-               <releases>
-                  <enabled>true</enabled>
-               </releases>
-               <snapshots>
-                  <enabled>false</enabled>
-               </snapshots>
-            </repository>
-         </repositories>
-
-         <pluginRepositories>
-            <pluginRepository>
-               <id>jboss-public-repository</id>
-               <name>JBoss Repository</name>
-               <url>http://repository.jboss.org/nexus/content/groups/public</url>
-               <releases>
-                  <enabled>true</enabled>
-               </releases>
-               <snapshots>
-                  <enabled>false</enabled>
-               </snapshots>
-            </pluginRepository>
-         </pluginRepositories>
-
-         <!-- An optional Arquillian testing profile that executes tests 
-            in a remote JBoss AS instance -->
-         <!-- Run with: mvn clean test -Parq-jbossas-remote -->
-         <id>arq-jbossas-remote</id>
-         <dependencies>
-            <dependency>
-               <groupId>org.jboss.as</groupId>
-               <artifactId>jboss-as-arquillian-container-remote</artifactId>
-               <version>7.0.2.Final</version>
-               <scope>test</scope>
-            </dependency>
-         </dependencies>
-      </profile>
-
-   </profiles>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <compilerArguments>
+                        <endorseddirs>${endorsed.dir}</endorseddirs>
+                    </compilerArguments>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-ejb-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <ejbVersion>3.1</ejbVersion>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.1</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${endorsed.dir}</outputDirectory>
+                            <silent>true</silent>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>javax</groupId>
+                                    <artifactId>javaee-endorsed-api</artifactId>
+                                    <version>6.0</version>
+                                    <type>jar</type>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
