--- a/periscope-ejb/pom.xml
+++ b/periscope-ejb/pom.xml
@@ -90,6 +90,11 @@
             <version>1.0</version>
         </dependency>
         <dependency>
+            <groupId>com.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
             <version>3.10-beta2</version>
