--- a/periscope-ejb/pom.xml
+++ b/periscope-ejb/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <netbeans.hint.deploy.server>JBoss4</netbeans.hint.deploy.server>
     </properties>
 
     <dependencies>
@@ -88,11 +89,6 @@
             <groupId>com.github.mongoutils</groupId>
             <artifactId>mongo-lucene</artifactId>
             <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
-            <version>2.8.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
