--- a/periscope-ejb/pom.xml
+++ b/periscope-ejb/pom.xml
@@ -84,10 +84,30 @@
             <artifactId>fixjures</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
+        <!--        <dependency>
             <groupId>com.github.mongoutils</groupId>
             <artifactId>mongo-lucene</artifactId>
             <version>1.0</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>4.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-analyzers-common</artifactId>
+            <version>4.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queryparser</artifactId>
+            <version>4.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queries</artifactId>
+            <version>4.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -104,7 +124,6 @@
             <artifactId>jempbox</artifactId>
             <version>1.8.4</version>
         </dependency>
-        
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
