Arrumado o bug da harmonização e adicionada as novas modificações da mesma

--- a/periscope-ejb/src/main/resources/descriptors.yaml
+++ b/periscope-ejb/src/main/resources/descriptors.yaml
@@ -7699,11 +7699,14 @@
 - count: 0
   expansion:
     -
-      - south africa
+      - south 
+      - africa
     -
-      - south african
+      - south
+      - african
     -
-      - south america
+      - south 
+      - america
     -
       - south
       - american
