--- a/periscope-ejb/src/main/resources/applicantType-inicial.yaml
+++ b/periscope-ejb/src/main/resources/applicantType-inicial.yaml
@@ -5,4 +5,8 @@
 - name: private.research
 - name: public.company
 - name: public.university
+- name: foreign.university
+- name: local.fostering
+- name: federal.fostering
+- name: private.fostering 
 ---
