--- a/periscope-ejb/pom.xml
+++ b/periscope-ejb/pom.xml
@@ -143,9 +143,32 @@
             <url>http://repository.primefaces.org</url>
         </repository>
     </repositories>
+    
+    <scm>
+        <connection>scm:git:git://github.com/UFMT/periscope.git</connection>
+        <developerConnection>scm:git:git@github.com:UFMT/periscope.git</developerConnection>
+        <tag>HEAD</tag>
+        <url>https://github.com/UFMT/periscope</url>
+    </scm>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.3</version>
+                <configuration>
+                    <shortRevisionLength>7</shortRevisionLength>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -164,6 +187,14 @@
                 <version>2.3</version>
                 <configuration>
                     <ejbVersion>3.1</ejbVersion>
+                    <archive>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                        </manifest>
+                        <manifestEntries>
+                            <Implementation-Build>${buildNumber}</Implementation-Build>
+                        </manifestEntries>
+                    </archive>
                 </configuration>
             </plugin>
             <plugin>
